manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  type: ExternalName
  externalName: "plex-plex-media-server.plex.svc.cluster.local"
